--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body{
     padding: 0;
     margin: 0;
 }
+p,span{
+    text-align: justify;
+}
 .my_nav{
     display: flex;
     align-items: center;
